--- a/app/src/main/res/layout/fragment_account_tab3_afterlogin.xml
+++ b/app/src/main/res/layout/fragment_account_tab3_afterlogin.xml
@@ -6,24 +6,37 @@
     android:textAlignment="center"
     tools:context=".View.Account.Account_AfterLoginFragment">
 
-    <TextView
-        android:id="@+id/nameTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
-        android:text="ffgfg"
-        android:textSize="17dp"
-        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/hello"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:textSize="20dp"
+            android:text="@string/hello" />
+
+        <TextView
+            android:id="@+id/nameTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
 
     <Button
-        android:id="@+id/btnBack"
+        android:id="@+id/btnHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="Back" />
+        android:text="@string/home" />
 
 
 </FrameLayout>
