--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="17dp" />
+        android:textSize="17sp" />
     <TextView
         android:id="@+id/quantity"
         android:layout_width="wrap_content"
@@ -18,14 +18,14 @@
         android:layout_below="@id/name"
         android:layout_marginTop="7dp"
         android:textColor="#343434"
-        android:textSize="14dp" />
+        android:textSize="14sp" />
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/quantity"
         android:layout_alignBottom="@+id/quantity"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:textColor="#343434"
-        android:textSize="14dp" />
+        android:textSize="14sp" />
 </RelativeLayout>
